fix header z-index issue

--- a/src/components/Header.module.css
+++ b/src/components/Header.module.css
@@ -17,6 +17,7 @@
 
   background-color: rgba(60, 60, 60, 0.2);
   backdrop-filter: blur(8px);
+  z-index: 1000 !important;
 }
 
 .linkContainer > a {
